Updated links to moderngpu organization

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://www.github.com/seanbaxter/moderngpu"> 
+<meta http-equiv="refresh" content="0; url=https://www.github.com/moderngpu/moderngpu"> 
